infra/kubernetes/base/orientapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orientapi
  namespace: orientapi
  labels:
    app.kubernetes.io/name: orientapi
    app.kubernetes.io/part-of: orientops
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: orientapi
  ports:
    - name: http
      port: 80
      targetPort: 8000
      nodePort: 30080
